--- a/web.css
+++ b/web.css
@@ -120,3 +120,54 @@ h3{
 .food-col:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
+.Items{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top:50px ;
+}
+.items-col{
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30PX;
+    position: relative;
+    overflow: hidden;
+}
+.items-col img{
+    width: 100%;
+}
+.layer{
+    background: rgba(226,0,0,0.7);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+}
+.layer:hover{
+    background: rgba(81, 197, 63, 0.605);
+}
+.layer h3{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    bottom: 0;
+    font-size: 26px;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+
+}
+.layer:hover h3{
+    bottom:49%;
+    opacity: 1;
+}
+.facilities{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top:100px ;
+}
